--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Awesome Books</title>
+    <style type="text/css" src="style.css"></style>
 </head>
 <body>
-    
+    <h1>Awesome Books</h1>
+    <section id="section">
+
+    </section>
+
+    <form action="">
+        <input type="text" placeholder="title" id="title"> <br> <br>
+        <input type="text" placeholder="author" id="author"> <br> <br>
+        <button src="#" type="button" id="Add">Add</button> <br> <br>
+        <p class="errorMsg"></p>
+    </form>
+
+    <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
