--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Awesome Books</title>
-    <style type="text/css" src="style.css"></style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Awesome Books</h1>
@@ -14,12 +14,12 @@
     </section>
 
     <form action="">
-        <input type="text" placeholder="title" id="title"> <br> <br>
-        <input type="text" placeholder="author" id="author"> <br> <br>
-        <button src="#" type="button" id="Add">Add</button> <br> <br>
+        <input type="text" placeholder="title" id="title"><br><br>
+        <input type="text" placeholder="author" id="author"><br><br>
+        <button src="#" type="button" id="Add">Add</button><br><br>
         <p class="errorMsg"></p>
     </form>
 
-    <script type="text/javascript" src="main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
