--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 
     </section>
 
-    <form action="">
+    <div>
         <input type="text" placeholder="title" id="title"><br><br>
         <input type="text" placeholder="author" id="author"><br><br>
-        <button src="#" type="button" id="Add">Add</button><br><br>
+        <button type="button" id="Add">Add</button><br><br>
         <p class="errorMsg"></p>
-    </form>
+    </div>
 
     <script src="main.js"></script>
 </body>
