--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <h1>Awesome Books</h1>
-    <section id="section">
-
+    <section id="books">
+<!-- This contant belongs to Java-script -->
     </section>
 
     <div>
-        <input type="text" placeholder="title" id="title"><br><br>
-        <input type="text" placeholder="author" id="author"><br><br>
-        <button type="button" id="Add">Add</button><br><br>
+        <input type="text" placeholder="title" id="title" required><br><br>
+        <input type="text" placeholder="author" id="author" required><br><br>
+        <button type="button" id="add-btn">Add</button><br><br>
     </div>
 
     <script src="main.js"></script>
