--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Awesome Books</title>
+    <style type="text/css" src="style.css"></style>
 </head>
 <body>
-    <h1>Awesome Books</h1>
+    <h1>All awesome books</h1>
     <section id="books">
 <!-- This contant belongs to Java-script -->
     </section>
@@ -18,6 +20,6 @@
         <button type="button" id="add-btn">Add</button><br><br>
     </div>
 
-    <script src="main.js"></script>
+    <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
