--- a/index.html
+++ b/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Awesome Books</title>
-    <style type="text/css" src="style.css"></style>
-</head>
-<body>
-    <h1>All awesome books</h1>
-    <section id="books">
-<!-- This contant belongs to Java-script -->
-    </section>
-
-    <div>
-        <input type="text" placeholder="title" id="title" required><br><br>
-        <input type="text" placeholder="author" id="author" required><br><br>
-        <button type="button" id="add-btn">Add</button><br><br>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Awesome-books</title>
+    <link rel="stylesheet" href="css/style.css">
+  </head>
+  <body>
+    <h1>All Awesome Books</h1>
+    <div id="books-list">
+      <ul id="books">
+        <!-- This contant belongs to Java-script -->
+      </ul>
     </div>
-
-    <script type="text/javascript" src="main.js"></script>
-</body>
+    <h2 class="addbook">Add a new book</h2>
+    <div class="book-form">
+    <form>
+      <input type="text" placeholder="title" id="title" required/> <br> <br>
+      <input type="text" placeholder="author" id="author" required/> <br> <br>
+      <button type="submit" id="add-btn">Add</button>
+    </form>
+  </div>
+    <script src="main.js"></script>
+  </body>
 </html>
