--- a/index.html
+++ b/index.html
@@ -9,19 +9,23 @@
   </head>
   <body>
     <h1>All Awesome Books</h1>
-    <div id="books-list">
-      <ul id="books">
+
+    <div class="books-list" id="books-list">
+      <ul class="books" id="books">
         <!-- This contant belongs to Java-script -->
       </ul>
     </div>
+
     <h2 class="addbook">Add a new book</h2>
+
     <div class="book-form">
-    <form>
-      <input type="text" placeholder="title" id="title" required/> <br> <br>
-      <input type="text" placeholder="author" id="author" required/> <br> <br>
-      <button type="submit" id="add-btn">Add</button>
-    </form>
-  </div>
+      <form>
+        <input type="text" placeholder="title" id="title" required/> <br> <br>
+        <input type="text" placeholder="author" id="author" required/> <br> <br>
+        <button type="submit" id="add-btn">Add</button>
+      </form>
+    </div>
+
     <script src="main.js"></script>
   </body>
 </html>
