Add to index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="books-list" id="books-list">
       <ul class="books" id="books">
-        <!-- This contant belongs to Java-script -->
+        <!-- Contant dynamically generated with JavaScript -->
       </ul>
     </div>
 
