Adjust header and footer styling

--- a/index.html
+++ b/index.html
@@ -8,8 +8,19 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <h1>All Awesome Books</h1>
+    <header>
+        <div class="header-div">
+            <h4>Awesome Books</h4>
+            <ul class="header-list">
+               <li class="item">List</li>
+               <li class="item">Add new</li>
+               <li class="item2">Contact</li>
+            </ul>
+        </div>
+        <h4 class="date">March 22nd 2023, 1:30:00 am</h4>
+    </header>
 
+    <h1>All Awesome Books</h1>
     <div class="books-list" id="books-list">
       <ul class="books" id="books">
         <!-- Contant dynamically generated with JavaScript -->
@@ -25,6 +36,10 @@
         <button type="submit" id="add-btn">Add</button>
       </form>
     </div>
+
+    <footer>
+        <h4>Copyright  ...</h4>
+    </footer>
 
     <script src="main.js"></script>
   </body>
