Adjust project styling

--- a/index.html
+++ b/index.html
@@ -42,15 +42,17 @@
         </form>
       </div>
     </section>
-    <section id="contact">
+    <section class="contact" id="contact">
       <h2>Contact information</h2>
       <p>
-        Do you have any questions or you just want to say "Hello"? <br />
-        You can reach out to us!
+        Do you have any questions or you just want to say "Hello"?
       </p>
-      <p>Our email: mail@mail.com</p>
-      <p>Our phone number: 0043586534422</p>
-      <p>Our adress: Streetname 22, 84503 City,Country</p>
+      <p class="text">You can reach out to us!</p>
+      <ul class="contact-info">
+        <li>Our email: mail@mail.com</li>
+        <li>Our phone number: 0043586534422</li>
+        <li>Our adress: Streetname 22, 84503 City,Country</li>
+      </ul>
     </section>
     <footer>
       <h4>Copyright ...</h4>
