Adjust project styling

--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
     </section>
     <section class="contact" id="contact">
       <h2>Contact information</h2>
-      <p>
-        Do you have any questions or you just want to say "Hello"?
-      </p>
-      <p class="text">You can reach out to us!</p>
-      <ul class="contact-info">
-        <li>Our email: mail@mail.com</li>
-        <li>Our phone number: 0043586534422</li>
-        <li>Our adress: Streetname 22, 84503 City,Country</li>
-      </ul>
+      <nav>
+        <p>Do you have any questions or you just want to say "Hello"?</p>
+        <p class="text">You can reach out to us!</p>
+        <ul class="contact-info">
+            <li>Our email: mail@mail.com</li>
+            <li>Our phone number: 0043586534422</li>
+            <li>Our adress: Streetname 22, 84503 City,Country</li>
+          </ul>
+      </nav>
     </section>
     <footer>
       <h4>Copyright ...</h4>
