Implementing required changes

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       </div>
       <h4 class="date">March 22nd 2023, 1:30:00 am</h4>
     </header>
-    <section id="books">
-      <h1>All Awesome Books</h1>
+    <section class="all-books" id="books">
+      <h2>All Awesome Books</h2>
       <div class="books-list" id="books-list">
         <ul class="books" id="books">
           <!-- Contant dynamically generated with JavaScript -->
